ChangeLog about Mulk: open source non-interactive multi-connection network
downloader with image filtering and Metalink support (version 0.5.2, beta)


2011/04/22 Emanuele <pocoyo@users.sourceforge.net>
	* specific Mulk return codes have been added to the library functions
	* new --with-libmetalink option in configure in order to specify different path for libmetalink library.

2010/11/19 Emanuele <pocoyo@users.sourceforge.net>
	* MSVC solution has been revisited and rationalised

2010/09/29 Emanuele <pocoyo@users.sourceforge.net>
	* a short notice about license has been added. It is visible with version option

2010/09/27 Emanuele <pocoyo@users.sourceforge.net>
	* unique DEBUG compilation flag has been created 
	* check in configure.ac for malloc, calloc, free and vsnprintf has been added

2010/09/24 Emanuele <pocoyo@users.sourceforge.net>
	* bug fixed, when downloading Metalink file size, under some circumstances not all the possible URLs were tried
	* bug fixed, when downloading Metalink file size, with a 200 HTTP code the size was considered valid also if not sent correctly

2010/09/23 Emanuele <pocoyo@users.sourceforge.net>
	* bug fixed, before the total number of downloaded files was wrong if an error occurred
	* bug fixed, during Metalink download when the filesize was missing and the URLs were wrong, Mulk tried anyway to control the checksum
	* bug fixed, during Metalink download FTP protocol was used erroneously to find the missing filesize

2010/09/22 Emanuele <pocoyo@users.sourceforge.net>
	* a "(null)" string was printed to reports when a not HTTP protocol was used

2010/09/17 Emanuele <pocoyo@users.sourceforge.net>
	* m_malloc.c has been totally rewritten for license compatibility
	* translations has been updated
	* gettext.h has been updated 

2010/09/12 Emanuele <pocoyo@users.sourceforge.net>
	* static and dynamic libraries creation has been added to MSVC's solution

2010/09/10 Emanuele <pocoyo@users.sourceforge.net>