@@ -102,7 +102,6 @@ extern char mulk_version_number[];
 /* initialisation */
 MULK_API mulk_type_return_t mulk_find_short_option(const char name, int *index);
 MULK_API mulk_type_return_t mulk_find_long_option(const char *name, int *index);
-MULK_API mulk_type_return_t mulk_compute_options(void);
 MULK_API mulk_type_return_t mulk_compute_urls(void);
 MULK_API mulk_type_return_t mulk_set_option(int ind, const char *value);
 MULK_API mulk_type_return_t mulk_set_options(int argc, char **argv);
